# SanitariumHDPatcher

./: .gitmodules  CMakeLists.txt  patches.json  readme.md
include/: Patch.h  PatchCollection.h  PatchesJSONParser.h  Types.h
resources/: patches.json
src/: CMakeLists.txt  Patch.cpp  PatchCollection.cpp  PatchesJSONParser.cpp  main.cpp  main.cpp.in
